style: correct extra whitespaces and units of measure

--- a/singolo2.css
+++ b/singolo2.css
@@ -71,7 +71,7 @@ a {
   font-size: 18px;
   line-height: 30px;
   color: #767e9e;
-  letter-spacing: 0px;
+  letter-spacing: 0;
 }
 
 .filters-wrapper {
@@ -96,7 +96,7 @@ a {
   vertical-align: middle;
   text-transform: capitalize;
   word-spacing: -0.2px;
-  
+
   background-color: transparent;
   border: 1px solid #666d89;
   border-radius: 5px;
@@ -138,7 +138,7 @@ a {
   max-height: 625px;
 
   list-style: none;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
 .portfolio-item {
@@ -218,7 +218,7 @@ a {
 }
 
 .team-member-desc span {
-  letter-spacing: 0px;
+  letter-spacing: 0;
   word-spacing: 0.2px;
 }
 
@@ -244,7 +244,7 @@ a {
   box-sizing: border-box;
   width: 32px;
   height: 31px;
-  
+
   background-image: url("assets/img/icon-fb.png");
   background-repeat: no-repeat;
   background-position: 50% 50%;
